[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hackernews-cli"
version = "1.0.0"
authors = [
  { name="Kamil Chmielewski", email="kamil.chm@gmail.com" },
]
description = "Read HackerNews like a hacker"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "httpx>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-httpx>=0.20.0",
    "wheel",
]

[project.urls]
"Homepage" = "https://github.com/kamilchm/developer-experience"

[project.scripts]
hn = "hncli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["hncli*"]
